--- a/storage-disk/pom.xml
+++ b/storage-disk/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>storage-disk</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4</version>
 
     <parent>
         <groupId>io.github.luidmidev</groupId>
         <artifactId>storage</artifactId>
-        <version>0.0.3</version>
+        <version>0.0.4</version>
     </parent>
 
     <properties>
@@ -21,7 +21,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.luidmidev</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>storage-core</artifactId>
             <version>${project.version}</version>
         </dependency>
