--- a/storage-spring-data-jpa/pom.xml
+++ b/storage-spring-data-jpa/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>storage-spring-data-jpa</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4</version>
 
     <parent>
         <groupId>io.github.luidmidev</groupId>
         <artifactId>storage</artifactId>
-        <version>0.0.3</version>
+        <version>0.0.4</version>
     </parent>
 
     <properties>
@@ -23,13 +23,25 @@
     <dependencies>
 
         <dependency>
-            <groupId>io.github.luidmidev</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>storage-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.2.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
             <version>${spring.version}</version>
         </dependency>
         <dependency>
@@ -50,6 +62,7 @@
             <version>5.11.0-M2</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 </project>
