--- a/storage-spring-gridfs/pom.xml
+++ b/storage-spring-gridfs/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>storage-spring-gridfs</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4</version>
 
     <parent>
         <groupId>io.github.luidmidev</groupId>
         <artifactId>storage</artifactId>
-        <version>0.0.3</version>
+        <version>0.0.4</version>
     </parent>
 
     <properties>
@@ -22,13 +22,18 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.luidmidev</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>storage-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>4.3.5</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
             <version>${spring.version}</version>
         </dependency>
         <dependency>
